<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.purchases.PurchaseFilterBottomSheetFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="25dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_filter_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_filter_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_all" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_filter_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_this_month" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_filter_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_this_year" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>