<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.xavidev.testessential.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tbr_profile"
                style="@style/ToolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/text_profile" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abl_profile"
            app:srcCompat="@drawable/air_jordan_mid_college" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_profile_image"
            app:layout_constraintStart_toStartOf="@+id/img_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/img_profile_image"
            tools:text="Francisco Javier" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            tools:text="javierlicea.dev@gmail.com" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_address"
                    style="@style/ClickableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> vm.clickAddressInfo()}"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/tv_address_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_address_information"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_add_or_update_your_addresses"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_address_title" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/text_chevron_right"
                        android:src="@drawable/ic_chevron_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerColor="@color/gray" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_payment_method"
                    style="@style/ClickableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> vm.clickPaymentMethods()}"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/tv_payment_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_payment_method"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_payment_method_subtitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_payment_title" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/text_chevron_right"
                        android:src="@drawable/ic_chevron_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_out"
                    style="@style/TextButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_sign_out" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>