<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FilledCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_item_card"
        style="@style/ClickableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:contentDescription="@string/text_credit_card_icon"
            android:src="@drawable/ic_credit_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_card_last_digits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/img_remove_card"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="End with 8019" />

        <TextView
            android:id="@+id/tv_card_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="@+id/tv_card_last_digits"
            app:layout_constraintStart_toStartOf="@+id/tv_card_last_digits"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_last_digits"
            tools:text="Citibanamex" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_card_bank"
            app:layout_constraintStart_toStartOf="@+id/tv_card_bank"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_bank"
            tools:text="Expiration: 09/24" />

        <com.google.android.material.chip.Chip
            style="@style/ChipCheckedStyle"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_default"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/img_remove_card"
            style="@style/ClickableImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_remove_card"
            android:padding="8dp"
            android:src="@drawable/ic_remove_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>